# zip

./: ARCHITECTURE.md  Cargo.toml  OPEN_SOURCE.md  README.md
src/: lib.rs
src/api/: registration.rs  types.rs
src/device/: capabilities.rs  keypair.rs  mod.rs
src/inference/: backend.rs  coordinator.rs  fast_path.rs  kv_cache.rs  mod.rs  tensor_ops.rs
src/provider/: mod.rs
